minor spacing fixes and scrolbar styling

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -42,4 +42,24 @@ $positions: static, relative, absolute, fixed, sticky;
 	}
 }
 
+// scrollbar styling
+@mixin scrollbars($size, $foreground-color, $background-color: mix($foreground-color, white, 50%)) {
+	// Webkit
+	&::-webkit-scrollbar {
+		width: $size;
+		height: $size;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: $foreground-color;
+	}
+
+	&::-webkit-scrollbar-track {
+		background: $background-color;
+	}
+
+	// Firefox
+	scrollbar-color: $foreground-color $background-color;
+}
+
 @import '~bootstrap/scss/bootstrap';
