--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,8 @@
 html,
 body {
 	scroll-behavior: smooth;
+
+	@include scrollbars(10px, $primary-color, $grey);
 }
 
 body {
